@@ -4,6 +4,7 @@ Core
 * Running youtube-dl in the background is fixed (#10996, #10706, #955)
 
 Extractors
++ [dotsub] Support Vimeo embed (#10964)
 * [litv] Fix extraction
 
 
